--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -13,7 +13,7 @@
         tools:context="com.example.ekene.blogzone.PostActivity">
 
         <ImageButton
-            android:id="@+id/imageBtn"
+            android:id="@+id/imagebutton_post_addImage"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:adjustViewBounds="true"
@@ -21,7 +21,7 @@
             android:src="@drawable/add_img" />
 
         <EditText
-            android:id="@+id/textTitle"
+            android:id="@+id/edittext_post_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -34,7 +34,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/textDesc"
+            android:id="@+id/edittext_post_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -46,7 +46,7 @@
             android:textColor="#fff" />
 
         <Button
-            android:id="@+id/postBtn"
+            android:id="@+id/button_post_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
