--- a/app/src/main/res/layout/card_items.xml
+++ b/app/src/main/res/layout/card_items.xml
@@ -4,44 +4,44 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_post_image"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:id="@+id/image_post"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/text_post_title"
+            android:id="@+id/tv_post_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:text="Post Title"
             android:textColor="#000"
-            android:textStyle="bold"
-            android:text="Post Title"/>
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_post_desc"
+            android:id="@+id/tv_post_desc"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="5dp"
-            android:text="Post Description"/>
+            android:text="Post Description" />
 
         <TextView
-            android:id="@+id/text_post_user"
+            android:id="@+id/tv_post_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Kenny"
-            android:textSize="15sp"
             android:fontFamily="serif"
             android:gravity="end"
-            android:textStyle="bold"
-            android:textColor="#FF07B618" />
+            android:text="Kenny"
+            android:textColor="#FF07B618"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
