--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/lowres"
+    android:background="@drawable/main_background_3"
     tools:context="com.example.myfirebaseblog.MainActivity">
 
     <android.support.design.widget.AppBarLayout
